@@ -1,6 +1,14 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>
+
+	* src/proto.h src/proto-common.c: add extra parameter to chanmsg_func_t
+	and reg_chanmsg_func.
+
+	* src/chanserv.c src/modcmd.c: add extra NULL argument/parameter to
+	reflect change in proto.
+
 2009-10-31  Henrik Stuart  <evilnet@hstuart.dk>
 
 	* src/nickserv.h src/nickserv.c: add extra parameter to
